hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-internal-controller
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-internal
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-internal
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: ingress-nginx
      containers:
        - name: controller
          image: hub.bktencent.com/registry.k8s.io/ingress-nginx/controller:v1.3.1
          args:
            - /nginx-ingress-controller
            - '--publish-service=$(POD_NAMESPACE)/ingress-nginx-internal-controller'
            - '--election-id=ingress-controller-leader-internal'
            - '--controller-class=k8s.io/ingress-nginx'
            - '--ingress-class=nginx-internal'
            - '--configmap=$(POD_NAMESPACE)/ingress-nginx-controller'
            - '--validating-webhook=:8443'
            - '--validating-webhook-certificate=/usr/local/certificates/cert'
            - '--validating-webhook-key=/usr/local/certificates/key'
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: http-metrics
              containerPort: 10254
            - name: webhook
              containerPort: 8443
